CA1/gen/main/grammar/FunctionCraftParser.java
// Generated from D:/UNI/Term6/PLC/CAs/ArianVersion/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, PRINT=2, FUN_STARTER=3, ENDER=4, RETURN=5, IF=6, ELSE=7, ELSEIF=8, 
		TRUE=9, FALSE=10, CHOP=11, CHOMP=12, PUSH=13, METHOD=14, LEN=15, PATTERN_SIGN=16, 
		MATCH=17, LOOP_CONTINUE=18, BREAK=19, LOOP=20, DO=21, FOR=22, IN=23, INDENTIFIER=24, 
		INT=25, FLOAT=26, STRING=27, BOOL=28, LIST=29, FUN_POINTER=30, INT_VAL=31, 
		FLOAT_VAL=32, STRING_VAL=33, FUN_POINTER_VAL=34, LPAR=35, RPAR=36, DOT=37, 
		APPEND_SIGN=38, GEQ=39, LEQ=40, GTR=41, LES=42, EQL=43, NEQ=44, ASSIGN=45, 
		ADD_ASSIGN=46, MINUS_ASSIGN=47, MULT_ASSIGN=48, DIV_ASSGIN=49, MOD_ASSIGN=50, 
		INC=51, DEC=52, PLUS=53, MINUS=54, MULT=55, DIV=56, MOD=57, AND=58, OR=59, 
		LOG_AND=60, LOG_OR=61, NOT=62, LBRACKET=63, RBRACKET=64, LBRACE=65, RBRACE=66, 
		COMMA=67, COLON=68, SEMICOLON=69, LAMBDA_STARTER=70, ONE_COMMENT=71, MULTI_COMMENT=72, 
		TAB=73, WS=74, BOOL_VAL=75;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_function = 2, RULE_bodyFunction = 3, 
		RULE_arguments = 4, RULE_argInside = 5, RULE_parameter = 6, RULE_paramInside = 7, 
		RULE_paramAssignment = 8, RULE_statement = 9, RULE_lambdaFunction = 10, 
		RULE_returnInside = 11, RULE_functionReturn = 12, RULE_functionCall = 13, 
		RULE_labdaCall = 14, RULE_loopLoop = 15, RULE_bodyLoop = 16, RULE_ifLoop = 17, 
		RULE_elifLoop = 18, RULE_elseLoop = 19, RULE_forLoop = 20, RULE_forList = 21, 
		RULE_forRange = 22, RULE_argumentsCall = 23, RULE_appendArgument = 24, 
		RULE_if = 25, RULE_elif = 26, RULE_else = 27, RULE_afterIf = 28, RULE_ifInside = 29, 
		RULE_nextIF = 30, RULE_breakIF = 31, RULE_listVal = 32, RULE_listInside = 33, 
		RULE_pattern = 34, RULE_patternCall = 35, RULE_patternInside = 36, RULE_builtInsideFuns = 37, 
		RULE_putPush = 38, RULE_chopChomp = 39, RULE_len = 40, RULE_appendStr = 41, 
		RULE_strExpr = 42, RULE_assignmentExpr = 43, RULE_appendExpr = 44, RULE_appendExprTail = 45, 
		RULE_logicExpr = 46, RULE_logicExpr2 = 47, RULE_singleLogic = 48, RULE_parLogic = 49, 
		RULE_eqCompExpr = 50, RULE_eqCompExprTail = 51, RULE_compExpr = 52, RULE_compExprTail = 53, 
		RULE_mathExpr = 54, RULE_mathExprTail = 55, RULE_addMinusExpr = 56, RULE_addMinusExprTail = 57, 
		RULE_preSingleMath = 58, RULE_postSingleMath = 59, RULE_itemAcces = 60, 
		RULE_type = 61, RULE_val = 62, RULE_booolVal = 63;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "function", "bodyFunction", "arguments", "argInside", 
			"parameter", "paramInside", "paramAssignment", "statement", "lambdaFunction", 
			"returnInside", "functionReturn", "functionCall", "labdaCall", "loopLoop", 
			"bodyLoop", "ifLoop", "elifLoop", "elseLoop", "forLoop", "forList", "forRange", 
			"argumentsCall", "appendArgument", "if", "elif", "else", "afterIf", "ifInside", 
			"nextIF", "breakIF", "listVal", "listInside", "pattern", "patternCall", 
			"patternInside", "builtInsideFuns", "putPush", "chopChomp", "len", "appendStr", 
			"strExpr", "assignmentExpr", "appendExpr", "appendExprTail", "logicExpr", 
			"logicExpr2", "singleLogic", "parLogic", "eqCompExpr", "eqCompExprTail", 
			"compExpr", "compExprTail", "mathExpr", "mathExprTail", "addMinusExpr", 
			"addMinusExprTail", "preSingleMath", "postSingleMath", "itemAcces", "type", 
			"val", "booolVal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'puts'", "'def'", "'end'", "'return'", "'if'", "'else'", 
			"'elseif'", "'true'", "'false'", "'chop'", "'chomp'", "'push'", "'method'", 
			"'len'", "'pattern'", "'match'", "'next'", "'break'", "'loop'", "'do'", 
			"'for'", "'in'", null, "'int'", "'float'", "'string'", "'bool'", "'list'", 
			"'fptr'", null, null, null, null, "'('", "')'", "'.'", "'<<'", "'>='", 
			"'<='", "'>'", "'<'", "'=='", "'!='", "'='", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", 
			"'|'", "'&&'", "'||'", "'!'", "'['", "']'", "'{'", "'}'", "','", "':'", 
			"';'", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "PRINT", "FUN_STARTER", "ENDER", "RETURN", "IF", "ELSE", 
			"ELSEIF", "TRUE", "FALSE", "CHOP", "CHOMP", "PUSH", "METHOD", "LEN", 
			"PATTERN_SIGN", "MATCH", "LOOP_CONTINUE", "BREAK", "LOOP", "DO", "FOR", 
			"IN", "INDENTIFIER", "INT", "FLOAT", "STRING", "BOOL", "LIST", "FUN_POINTER", 
			"INT_VAL", "FLOAT_VAL", "STRING_VAL", "FUN_POINTER_VAL", "LPAR", "RPAR", 
			"DOT", "APPEND_SIGN", "GEQ", "LEQ", "GTR", "LES", "EQL", "NEQ", "ASSIGN", 
			"ADD_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", "DIV_ASSGIN", "MOD_ASSIGN", 
			"INC", "DEC", "PLUS", "MINUS", "MULT", "DIV", "MOD", "AND", "OR", "LOG_AND", 
			"LOG_OR", "NOT", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "COMMA", 
			"COLON", "SEMICOLON", "LAMBDA_STARTER", "ONE_COMMENT", "MULTI_COMMENT", 
			"TAB", "WS", "BOOL_VAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<PatternContext> pattern() {
			return getRuleContexts(PatternContext.class);
		}
		public PatternContext pattern(int i) {
			return getRuleContext(PatternContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(130);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case FUN_STARTER:
						{
						setState(128);
						function();
						}
						break;
					case PATTERN_SIGN:
						{
						setState(129);
						pattern();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(135);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode FUN_STARTER() { return getToken(FunctionCraftParser.FUN_STARTER, 0); }
		public TerminalNode MAIN() { return getToken(FunctionCraftParser.MAIN, 0); }
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public BodyFunctionContext bodyFunction() {
			return getRuleContext(BodyFunctionContext.class,0);
		}
		public TerminalNode ENDER() { return getToken(FunctionCraftParser.ENDER, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			System.out.println("MAIN");
			setState(138);
			match(FUN_STARTER);
			setState(139);
			match(MAIN);
			setState(140);
			match(LPAR);
			setState(141);
			match(RPAR);
			setState(142);
			bodyFunction();
			setState(143);
			match(ENDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public Token name;
		public TerminalNode FUN_STARTER() { return getToken(FunctionCraftParser.FUN_STARTER, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public BodyFunctionContext bodyFunction() {
			return getRuleContext(BodyFunctionContext.class,0);
		}
		public TerminalNode ENDER() { return getToken(FunctionCraftParser.ENDER, 0); }
		public TerminalNode INDENTIFIER() { return getToken(FunctionCraftParser.INDENTIFIER, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(FUN_STARTER);
			setState(146);
			((FunctionContext)_localctx).name = match(INDENTIFIER);
			System.out.println("FuncDec: " + (((FunctionContext)_localctx).name!=null?((FunctionContext)_localctx).name.getText():null));
			setState(148);
			arguments();
			setState(149);
			bodyFunction();
			setState(150);
			match(ENDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyFunctionContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterBodyFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitBodyFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitBodyFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyFunctionContext bodyFunction() throws RecognitionException {
		BodyFunctionContext _localctx = new BodyFunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bodyFunction);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(152);
					statement();
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentsContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public ArgInsideContext argInside() {
			return getRuleContext(ArgInsideContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arguments);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(LPAR);
			setState(159);
			argInside();
			setState(160);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgInsideContext extends ParserRuleContext {
		public TerminalNode INDENTIFIER() { return getToken(FunctionCraftParser.INDENTIFIER, 0); }
		public TerminalNode COMMA() { return getToken(FunctionCraftParser.COMMA, 0); }
		public ArgInsideContext argInside() {
			return getRuleContext(ArgInsideContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public ArgInsideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argInside; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterArgInside(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitArgInside(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitArgInside(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgInsideContext argInside() throws RecognitionException {
		ArgInsideContext _localctx = new ArgInsideContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argInside);
		try {
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				match(INDENTIFIER);
				setState(163);
				match(COMMA);
				setState(164);
				argInside();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				parameter();
				setState(166);
				match(COMMA);
				setState(167);
				argInside();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(169);
				match(INDENTIFIER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				parameter();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
